# amrc

./: Cargo.toml  README.md  preset.twitter.yml.example
src/: conf.rs  main.rs  oauth2.rs  preset.rs
src/app/: app.rs  mod.rs  oauth2.rs  wrapped.rs
src/app/subcommand/: auth.rs  init.rs  mod.rs  request.rs
