[package]
name = "oauth2-helper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.anyhow]
version = "1.0.66"

[dependencies.clap]
version = "4.0.19"
features = ["derive"]

[dependencies.oauth2]
version = "4.2.3"

[dependencies.tokio]
version = "1.21.2"
features = ["full"]
