[package]
name = "amrc"
version = "0.1.0"
edition = "2021"

[dependencies.serde]
version = "1.0.147"
features = ["derive"]

[dependencies.serde_yaml]
version = "0.9.14"

[dependencies.serde_json]
version = "1"

[dependencies.reqwest]
version = "0.11.12"

[dependencies.anyhow]
version = "1.0.66"

[dependencies.clap]
version = "4.0.19"
features = ["derive"]

[dependencies.oauth2]
version = "4.2.3"

[dependencies.tokio]
version = "1.21.2"
features = ["full"]
